# germi

./: Cargo.toml  README.md
benches/: interpolator_bench.rs
src/: config.rs  context.rs  error.rs  interpolator.rs  lib.rs  scanner.rs
tests/: backtick_commands.rs  commands.rs  complex_scenarios.rs  edge_cases.rs  escapes.rs  features.rs  find_variable_references.rs  variables.rs
tests/common/: mod.rs
