[package]
name = "germi"
version = "0.1.0"
edition = "2021"
description = "High-performance environment variable interpolation engine"
license = "MIT"

[dependencies]
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.0", features = ["process", "rt"], optional = true }

[features]
default = []
serde = ["dep:serde"]
async = ["dep:tokio"]

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
