[package]
name = "germi"
version = "0.2.2"
edition = "2021"
description = "High-performance environment variable interpolation engine"
license = "MIT"

[dependencies]
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"], optional = true }
memchr = "2.7"
tokio = { version = "1.0", features = ["process", "rt"], optional = true }

[features]
default = []
serde = ["dep:serde"]
async = ["dep:tokio"]

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "interpolator_bench"
harness = false
